# facet-nn

./: Cargo.toml  MANIFEST.in  Makefile  README.md  requirements.txt  setup.py  tox.ini
.github/workflows/: main.yml
du-core/: Cargo.toml
du-core/src/: activation.rs  lib.rs  loss.rs  ndarray.rs
du-core/src/layer/: dense_layer.rs
du-core/src/ndarray/: arithmetic.rs  matrix.rs  scalar.rs  shape.rs  tests.rs
facet-core/: Cargo.toml
facet-core/benches/: benchmarks.rs
facet-core/src/: activation.rs  gpu.rs  layer.rs  lib.rs  loss.rs  ndarray.rs  prelude.rs  tests.rs
facet-core/src/gpu/: matmul.rs
facet-core/src/gpu/matmul/: gemm_ab.rs  matmul_a_mul_b.rs  tests.rs
facet-core/src/layer/: dense_layer.rs
facet-core/src/ndarray/: arithmetic.rs  column_iter.rs  matrix.rs  scalar.rs  shape.rs  tests.rs
models/: mnist.py  sine.py  titanic.py
nd/: Cargo.toml
nd/src/: activation.rs  io.rs  lib.rs  loss.rs  ndarray.rs  pyndarray.rs
nd/src/ndarray/: arithmetic.rs  column_iter.rs  matrix.rs  shape.rs  tests.rs
nd/src/pyndarray/: arrayimpl.rs  factory.rs
nd/src/pyndarray/arrayimpl/: ndbool.rs  ndf64.rs  ndi64.rs
nnfs/: __init__.py  __main__.py  iris.py  optimizers.py  titanic.py
pydu/: Cargo.toml
pydu/src/: activation.rs  io.rs  layer.rs  lib.rs  loss.rs  pyndarray.rs
pydu/src/layer/: dense_layer.rs
pydu/src/pyndarray/: arrayimpl.rs  factory.rs
pydu/src/pyndarray/arrayimpl/: ndbool.rs  ndf64.rs  ndi64.rs
pyfacet/: .gitignore  Cargo.toml  MANIFEST.in  setup.py  tox.ini
pyfacet/pyfacet/: __init__.py  accuracy.py  activation.py  layer.py  loss.py  model.py  optimizer.py  optimizers.py
pyfacet/src/: activation.rs  io.rs  lib.rs  loss.rs  pyndarray.rs
pyfacet/src/layer/: dense_layer.rs
pyfacet/src/pyndarray/: arrayimpl.rs  factory.rs
pyfacet/src/pyndarray/arrayimpl/: ndbool.rs  ndf32.rs  ndf64.rs  ndi64.rs
tests/: test_accuracy.py  test_activations.py  test_layers.py  test_linalg.py  test_loss.py  test_nd_array.py
