[package]
name = "facet-core"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

[lib]
name = "facet_core"

[features]
default = ["rayon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "*"
smallvec = "1"
rayon = { version = "1", optional = true }
