[package]
name = "facet-core"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

[lib]
name = "facet_core"
bench = false

[features]
default = ["rayon", "gpu"]
gpu = ["vulkano", "vulkano-shaders", "lazy_static", "rayon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "*"
smallvec = "1"
rayon = { version = "1", optional = true }
vulkano = { version = "0.20", optional = true }
vulkano-shaders = { version = "0.20", optional = true }
lazy_static = { version = "1", optional = true }
rand = "0.7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
