[package]
name = "facet-core"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

[lib]
name = "facet_core"
bench = false

[features]
default = ["rayon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0.30"
smallvec = "1.7.0"
rayon = { version = "1.5.1", optional = true }
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmarks"
harness = false
