[package]
name = "pydu"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

[lib]
name = "pydu"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
du-core = { path = "../du-core" }
pyo3 = { version = "0.12", features = ["extension-module"] }
uuid = { version = "*", features = ["v4"] }
