[package]
name = "pyfacet"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

[lib]
name = "pyfacet"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
facet-core = { path = "../facet-core", features = ["rayon", "gpu"] }
pyo3 = { version = "0.12", features = ["extension-module"] }
uuid = { version = "*", features = ["v4"] }
rand = "0.7"
rand_distr = "0.3"
